[redis add succ]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
     "module": "CommonJS",
     "sourceMap": true,
     "outDir": "dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "strict": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
