--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/morgan": "^1.9.4",
     "@yarnpkg/sdks": "^2.7.0",
     "babel-jest": "^29.4.1"
   }
