--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
