--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "packageManager": "yarn@3.4.1",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
